[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3.0.0"
itertools = "0.13.0"
miniz_oxide = "0.8.0"
regex = "1.10.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.release]
debug = true
